Resolves: tdf#91365 use underlying numeric value if available [API CHANGE]

... at least for setting the cell content. There are more places where
the numeric value could be transported but all Data Pilot pivot stuff is
based on text strings :-/

This appends a double Value member to com::sun::star::sheet::MemberResult

Change-Id: Ia9e8ac47d0877bd4a59a69d5921ce4ea082e8a69